[package]
name = "aurras"
version = "0.1.1"
edition = "2021"
authors = ["spectral369 <spectral369@freelancingpeter.eu>"]
description = "Discord Music Bot written in RUST"
homepage = "freelancingpeter.eu"
repository = "https://github.com/spectral369/aurras-bot/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = "0.14.0"
twilight-gateway = { version = "0.14.0", default-features = false, features = [
    "zlib-simd",
    "native",
] }
twilight-cache-inmemory = "0.14.0"
twilight-util = { version = "0.14.0", features = ["link", "builder"] }
twilight-validate = "0.14.0"
twilight-http = { version = "0.14.0", features = ["native"] }
twilight-standby = "0.14.0"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
#tokio = { features = ["macros", "rt-multi-thread", "sync"], version = "1.21.2" }
reqwest = { version = "0.11.13", features = ["json"] }
lazy-static-include = "3.1.3"
regex = "1.7.0"
linked_hash_set = "0.1.4"
async-trait = "0.1.58"


[dependencies.songbird]
default-features = false
git = "https://github.com/serenity-rs/songbird.git"
branch = "next"
features = ["rustls", "driver", "gateway", "twilight", "builtin-queue"]


[dependencies.symphonia]
version = "0.5.1"
features = ["aac", "mp3", "isomp4", "alac"]
git = "https://github.com/FelixMcFelix/Symphonia"
branch = "songbird-fixes"

[profile.release]
lto = true
